updated project directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-# Ignore node_modules directory
+.venv*/
 build/
 dist/
-Cracker.spec
-logo.ico
-
-# Ignore log files
-*.log
-
-# Ignore compiled Python files
-*.pyc
-
-# Ignore specific environment files
-.env
+src/
+app.spec
